Добавлены комментарии по тексту.

--- a/Dissertation/partExperiment.tex
+++ b/Dissertation/partExperiment.tex
@@ -1,6 +1,10 @@
 \chapter{Исседование эффективности адаптивного распределения управляющего воздействия}\label{ch:Experiment}
 \section{Модель динамики ПА}\label{sec:Experiment/Model}
 
+\begin{notequestion}
+Тут подробно описана динамика АНПА для качественной симуляции движения. До этого вопрос о АНПА как объекте управления не поднимался вообще.
+\end{notequestion}
+
 Традиционно, запись динамической модели пространственного движения подводного аппарата описывается в виде шести нелинейных дифференциальных управлений.
 Эти уравнения полностью учитывают взаимовлияния между всеми степенями свободы ПА, а так же гидродинамические и гидростатические силы и моменты, действующие на них со стороны окружающей вязкой среды.
 
@@ -211,8 +215,14 @@
 \end{equation*}
 
 \section{Реализация модели динамики АНПА}\label{sec:Experiment/ModelImplement}
-
+\begin{noteplan}
+Тут я всю эту динамику максимально упрощу и линеаризую для АНПА и покажу структурную схему численной симуляции
+\end{noteplan}
 
 \section{Сравнение различных методов управления ДРК на примере переходного процесса по глубине}\label{sec:Experiment/Test}
+
+\begin{noteplan}
+Тут будет сравнение методов распределения по энергетике на какой нибудь траектории. Будем только два метода сравнивать. Который в ИПМТ и предлагаемый.
+\end{noteplan}
 
 \section{Выводы по главе 5}
