--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -13,6 +13,11 @@
 Для корректного и энергетически эффективного решения задачи распределения управляющего воздействия на исполнительные механизмы движительно-рулевого комплекса необходимо корректно статически описать как сам комплекс исполнительных механизмов, так и динамические процессы происходящие в них с учётом гидродинамических особенностей их поведения.
 
 \section{Модель маршевого движителя ПА}
+
+\begin{noteplan}
+	Тут потом перемоделю через StateSpace вид с учетом особенностей BLDC приводов.
+\end{noteplan}
+
 Это один или несколько кормовых движителей, обеспечивающих продольное движение аппарата, а также возможность маневрирования по глубине и курсу.
 
 В работе \cite{10.1109/48.107145} была предложена модель движителя заданная в форме пространства состояний по входному параметру $n$ где $n$ -- скорость вращения вала:
@@ -425,3 +430,6 @@
 \end{figure}
 
 \section{Выводы по 2}
+\begin{noteplan}
+	Тут будет про то что проведено моделирование, показано что все ИМ очень сильно зависят от скорости набегающего потока и угла атаки и днейфа.
+\end{noteplan}
