--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -126,8 +126,16 @@
 
 Пусть течение в области движения АНПА неизменно по скорости и направлению и определяется переменными $u_c$ и $\phi_c$ В ИСК, соответственно.
 
+\begin{noteplan}
+    Тут еще не доработано. Добавлю про расчет угла атаки и дрейфа и возможность расчета параметров течения, если есть данные с доплера.
+\end{noteplan}
+
 \section{Исследование разработанного метода оценки скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
 В рамках исследования была проверена гипотеза о работоспособности метода оценки скорости набегающего потока по изменению параметров работы приводов маршевых двигателей.
+
+\begin{noteplan}
+    Здесь добавлю обработку данных с MMT-300. Там можно расчитать угол атаки который можно валидировать через угол дифферента в устоявшемся режиме. Но, наверное, в рамках НКР по остаточному принципу.
+\end{noteplan}
 
 Для этого этого были проанализированы стендовые и маршевые испытания движителей маршевой группы АНПА ``ММТ-3000'', а так же проанализированы данные тестовых запусков подводного аппарата в рамках которых были идентифицированы ГДХ аппарата.
 
@@ -184,6 +192,10 @@
 
 В рамках проведения нагрузочных испытаний электродвигателя был определен коэффициент магнитной связности $F_m$ (формула \ref{eq:couple_coeff}), который хорошо описывает зависимость момента на валу электропривода от величины тока на его в обмотках с поправкой на скорость вращения вала.
 На рисунке \ref{fig:motor_torque} отражена зависимость момента создаваемого электроприводом на валу и её расчет через коэффициент магнитной связности $F_m$ с поправкой на скорость вращения вала.
+
+\begin{noteplan}
+    Это наверное переделаю просто на нелинейность параметра Cm. Не думаю что есть смысл вводить новую сущность.
+\end{noteplan}
 
 \begin{figure}[ht]
     \centering
