--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,5 +1,10 @@
 {\actuality}
 Задача распределения управляющих воздействий (control allocation) возникает естественным образом для избыточного (over-actuated) ДРК ПА, то есть такого ДРК в котором ИМ (рули управления, основные и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
+
+\begin{notequestion}
+    Надо понять как лучше говорить. ``Управление ДРК'' или ``Распределение управляющих воздействий на ДРК''.
+\end{notequestion}
+
 \begin{itemize}
     \item в виду того, что подводные операции сопряжены с высокой степенью риска, избыточность необходима для реализации функций резервирования систем управления движением подводного аппарата;
     \item в силу гидродинамических особенностей функционирования при различных режимах движения (позиционный, крейсерский) часть исполнительных механизмов ДРК будет работать лучше или хуже; в соответствии с этим, при разработке многоцелевых подводных аппаратов необходимо использовать избыточные комплекты ИМ \cite{valasek2002design}.
@@ -17,7 +22,7 @@
 В отечественной литературе такая постановка задачи обычно не выделяется в отдельный класс \cite{филаретов2016особенности} и, например, задача аккомодации к отказам исполнительных механизмов решается в рамках управления объектом целиком \cite{мартынова2020подход, зыбин2014аналитическое}.
 Впрочем, упоминание задачи распределения управляющих воздействий можно найти в отдельных статьях \cite{амбросовский2013распределение, воловодов2003распределение, амбросовский2014алгоритмы} и главах диссертаций \cite{власов2016адаптивное}.
 
-Актуальность задачи распределения управляющих воздействий описана в большей степени в трудах зарубежных ученых Wayne C. Durham \cite{durham1993constrained, bordingnon1995closed, durham1994constrained, durham2001computationally} Ola Härkegård \cite{10.1016/j.automatica.2004.09.007, harkegaard2003backstepping, harkegaard2004dynamic}, коллектива учёных Thor I. Fossen и Tor A. Johansen (\cite{fossen2006survey, 10.1016/j.automatica.2013.01.035, 10.1109/tcst.2003.821952}), Alessandro Baldini \cite{baldini2018constrained, baldini2020constrained}, Edin Omerdic \cite{ahmad2007control, omerdic2020geometric, capocci2018fault}, Mehdi Naderi \cite{naderi2019guaranteed, naderi2019fault} и др.
+Актуальность задачи распределения управляющих воздействий описана в большей степени в трудах зарубежных ученых: Wayne C. Durham \cite{durham1993constrained, bordingnon1995closed, durham1994constrained, durham2001computationally} Ola Härkegård \cite{10.1016/j.automatica.2004.09.007, harkegaard2003backstepping, harkegaard2004dynamic}, коллектива учёных Thor I. Fossen и Tor A. Johansen (\cite{fossen2006survey, 10.1016/j.automatica.2013.01.035, 10.1109/tcst.2003.821952}), Alessandro Baldini \cite{baldini2018constrained, baldini2020constrained}, Edin Omerdic \cite{ahmad2007control, omerdic2020geometric, capocci2018fault}, Mehdi Naderi \cite{naderi2019guaranteed, naderi2019fault} и др.
 
 {\object} является движительно-рулевой комплекс автономного необитаемого подводного аппарата.
 
@@ -46,6 +51,9 @@
   \item разработать и реализовать метод плавного перераспределения управляющего воздействия при переходах между различными типами движения;
   \item провести проверку эффективности разработанного метода распределения управляющих воздействий на базе модельных экспериментов.
 \end{enumerate}
+\begin{noteplan}
+    Думаю задачи в самом конце оформим более подробно. Пока черновик.
+\end{noteplan}
 
 {\novelty}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
@@ -53,7 +61,9 @@
   \item разработан метод формирования глобальных границ и коэффициентов решения задачи оптимального распределения управляющих воздействий ДРК адаптивный к скорости набегающего потока и оценки его достоверности;
   \item разработан метод перераспределения управляющих воздействий при смене типа движения многофункционального АНПА.
 \end{enumerate}
-
+\begin{noteplan}
+    В новизне надо будет показать конкретные числовые преимущества каждого из предложений по сравнению с существующими вариантами. Уже по результатам моделироваия и испытаний будет на чистовую написано.
+\end{noteplan}
 {\influence} \ldots
 
 {\methods} В диссертационной работе использовались методы теории управления, линейной и нелинейной оптимизации; методы математического и имитационного моделирования, современные средства разработки программных комплексов и моделирования.
@@ -85,6 +95,9 @@
     \item ``Global Oceans 2020: Singapore - U.S. Gulf Coast'' (5-14 октября 2020 года);
     \item 
 \end{enumerate}
+\begin{noteplan}
+    В обсуждениях пока без разбору все конференции что вспомнил.
+\end{noteplan}
 
 {\contribution} Автор принимал участие в постановке цели и задач по теме исследования, разработал методы и алгоритмы, предложенные в данной работе, обработал и проанализировал экспериментальные данные, участвовал в обсуждении полученных результатов, подготовке научных статей, материалов конференций, участвовал на конференциях и семинарах.
 
